--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
             <div class="col-xs-6 col-md-4">
               <h3>Headlines</h3>
+              <!-- index.js -->
               <script src = "index.js" ></script>
               <button onclick='getnews()'>Get News</button>
               <div id="output"></div>
