--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
           <div class="row">
             <div class="col-xs-6 col-md-8">
               <h3>Listings</h3>
+              <script src = "coin.js" ></script>
+              <div id="output2"></div>
             </div>
             <div class="col-xs-6 col-md-4">
               <h3>Headlines</h3>
