Changed the example to allow user input
Oddly, you have to use value= instead of placeholder=. I'm guessing this is due to placeholder only displaying something and doesn't necessarily set itself equal to anything.

--- a/sender.html
+++ b/sender.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Parameter Sender</title>
+        <title>Parameter Sender Example</title>
     </head>
     <body>
-        <form action="receiver.html">
-            <input type="hidden" name="varname" value="12345" />
+        <form action="receiver.html" method="GET">
+            <input type="text" name="varname" value="12345"/>
+            <!-- <input type="hidden" name="varname" value="12345" /> -->
             <input type="submit" value="Send data">
           </form>          
     </body>
