--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
@@ -31,7 +32,7 @@
             <div class="col-lg-12 col-md-8">
                 <div class="jumbotron">
                     <h1 class="display-4">Cryptocurrency Tracker</h1>
-                    <p class="lead">This dashboard shows you the current market status of the top 15 Cryptocurrencies</p>
+                    <p class="lead">This dashboard shows you the current market status of the top 25 Cryptocurrencies</p>
                     <hr class="my-4">
                     <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
                         <i class="fas fa-search" aria-hidden="true"></i>
@@ -44,6 +45,19 @@
           <div class="row">
             <div class="col-xs-6 col-md-8">
               <h3>Listings</h3>
+              <table class="table table-striped">
+                <tr  class="bg-info">
+                    <th >#</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Market Cap</th>
+                    <th>Volume</th>
+                </tr>
+            
+                <tbody id="myTable">
+                    
+                </tbody>
+            </table>
               <script src = "coin.js" ></script>
               <div id="output2"></div>
             </div>
