update table info

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-lg-12 col-md-8">
                 <div class="jumbotron">
                     <h1 class="display-4">Cryptocurrency Tracker</h1>
-                    <p class="lead">This dashboard shows you the current market status of the top 25 Cryptocurrencies</p>
+                    <p class="lead">This dashboard shows you the current market status of the top 100 Cryptocurrencies</p>
                     <hr class="my-4">
                     <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
                         <i class="fas fa-search" aria-hidden="true"></i>
@@ -47,7 +47,7 @@
               <h3>Listings</h3>
               <table class="table table-striped">
                 <tr  class="bg-info">
-                    <th >#</th>
+                    <th data-column="name" data-order="desc"># &#9650</th>
                     <th>Name</th>
                     <th>Price</th>
                     <th>24h</th>
