--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.5.0/fetch.js"></script>
-    <script>src='table.js'</script>
+    
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous">
+    </script>
+
+    <script src='table.js'> </script>
+    <script src="headlines.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
@@ -26,7 +34,7 @@
         </div>
     </nav>
 
-    <body onload="request_table()">
+    <body onload="request_table(); request_headlines()">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-md-8">
@@ -64,12 +72,9 @@
               </table>
             </div>
           </div>
-          <div class="col-xs-6 col-md-4">
+          <div class="col-xs-6 col-md-4" id="headlines_container">
             <h3>Headlines</h3>
-            <div id="headlines_container"></div>
           </div>
         </div>
-        <script src="headlines.js"></script>
-        <script>src='table.js'</script>
     </body>
 </html>
