updated titles and UI

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
-        <a class="navbar-brand" href="#">Currency Tracker</a>
+        <a class="navbar-brand" href="#">Crypto Tracker</a>
         <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active"><a class="nav-link" href="#">home</a></li>
@@ -39,8 +39,8 @@
         <div class="row">
           <div class="col-lg-12 col-md-8">
               <div class="jumbotron">
-                  <h1 class="display-4">Cryptocurrency Tracker</h1>
-                  <p class="lead">This dashboard shows you the current market status of the top 15 Cryptocurrencies</p>
+                  <h1 class="display-4">Crypto Tracker</h1>
+                  <p class="lead">Browse top cryptocurrency listings and news</p>
                   <hr class="my-4">
                   <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
                       <i class="fas fa-search" aria-hidden="true"></i>
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
           <div class="col-xs-6 col-md-8">
-            <h3>Listings</h3>
+            <h3>Top cryptocurrencies</h3>
             <div id="table_container" >
               <table id="table" class="table table-striped">
                 <thead>
@@ -74,7 +74,7 @@
           </div>
 
           <div class="col-xs-6 col-md-4" id="headlines_container">
-            <h3>Headlines</h3>
+            <h3>Cryptocurrencies' latest</h3>
             <script> request_headlines();</script>
           </div>
         </div>
