Removing unnecssary scripts and changing to match index.html changes

--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Dashboard</title>
+    <title>Crypto Tracker</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -24,12 +24,12 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
-        <a class="navbar-brand" href="#">Currency Tracker</a>
+        <a class="navbar-brand" href="#">Crypto Tracker</a>
         <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active"><a class="nav-link" href="index.html">home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">about</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
         </ul>
         </div>
     </nav>
