--- a/about.html
+++ b/about.html
@@ -10,12 +10,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
-        <a class="navbar-brand" href="#">Currency Tracker</a>
+        <a class="navbar-brand" href="#">Crypto Tracker</a>
         <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active"><a class="nav-link" href="index.html">home</a></li>
@@ -30,7 +28,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-8">
                 <div class="jumbotron">
-                    <h1 class="display-4"><center>Cryptocurrency Tracker</center></h1>
+                    <h1 class="display-4"><center>Crypto Tracker</center></h1>
                     <hr class="my-4">
                     <form class="form-inline d-flex justify-content-center md-form form-sm mt-0" action="details.html" method="GET">
                         <i class="fas fa-search" aria-hidden="true"></i>
