--- a/contact.html
+++ b/contact.html
@@ -10,38 +10,26 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.js"></script>
-    <script src=graph.js></script>
-    <script src=details.js></script>
-    <script> //Grabbing the url parameter
-      var parameters = location.search.substring(1).split("&");
-      var temp = parameters[0].split("=");
-
-      var coin = temp[1].replaceAll("+", " ");
-      coin = unescape(coin);
-      </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
-        <a class="navbar-brand" href="#">Currency Tracker</a>
+        <a class="navbar-brand" href="#">Crypto Tracker</a>
         <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active"><a class="nav-link" href="index.html">home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">about</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
         </ul>
         </div>
     </nav>
 
-    
     
       <body>
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-md-8">
                 <div class="jumbotron">
-                    <h1 class="display-4"><center>Cryptocurrency Tracker</center></h1>
+                    <h1 class="display-4"><center>Crypto Tracker</center></h1>
                     <hr class="my-4">
                     <form class="form-inline d-flex justify-content-center md-form form-sm mt-0" action="details.html" method="GET">
                         <i class="fas fa-search" aria-hidden="true"></i>
