--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                   <hr class="my-4">
                   <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
                       <i class="fas fa-search" aria-hidden="true"></i>
-                      <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
-                        aria-label="Search">
+                      <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" id="search_input"
+                        aria-label="Search" >
                     </form>
                 </div>
           </div>
