--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous">
     </script>
 
-    <script src='table.js'> </script>
+    <script src='index.js'> </script>
     <script src="headlines.js"></script>
 </head>
 <body>
@@ -42,7 +42,7 @@
                   <h1 class="display-4">Crypto Tracker</h1>
                   <p class="lead">Browse top cryptocurrency listings and news</p>
                   <hr class="my-4">
-                  <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
+                  <form class="form-inline d-flex justify-content-center md-form form-sm mt-0" onsubmit="event.preventDefault(); load_crypto();">
                       <i class="fas fa-search" aria-hidden="true"></i>
                       <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" id="search_input"
                         aria-label="Search" >
