Took away event.preventdeault()

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <h1 class="display-4">Crypto Tracker</h1>
                   <p class="lead">Browse top cryptocurrency listings and news</p>
                   <hr class="my-4">
-                  <form class="form-inline d-flex justify-content-center md-form form-sm mt-0" onsubmit="event.preventDefault(); load_crypto();">
+                  <form class="form-inline d-flex justify-content-center md-form form-sm mt-0" onsubmit="load_crypto();">
                       <i class="fas fa-search" aria-hidden="true"></i>
                       <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" id="search_input"
                         aria-label="Search" >
@@ -53,7 +53,7 @@
         <div class="row">
           <div class="col-xs-6 col-md-8">
             <h3>Top cryptocurrencies</h3>
-            <div id="table_container" >
+            <div id="table_container">
               <table id="table" class="table table-striped">
                 <thead>
                   <tr class="bg-info">
