Added more info to detail.html; changed string comparison for name -> id conversion

--- a/details.html
+++ b/details.html
@@ -78,10 +78,26 @@
                     <th>Trading Volume</th>
                     <th id="vol"></th>
                   </tr>
+                  <tr id="hl" style="display: none">
+                    <th>24hr High/Low</th>
+                    <th id="hilo"></th>
+                  </tr>
+                  <tr id="24pc" style="display: none">
+                    <th>24hr Price Change</th>
+                    <th id="24h%"></th>
+                  </tr>
+                  <tr id="7dpc" style="display: none">
+                    <th>7 Day Price Change</th>
+                    <th id="7d%"></th>
+                  </tr>
+                  <tr id="14dpc" style="display: none">
+                    <th>14 Day Price Change</th>
+                    <th id="14d%"></th>
+                  </tr>
                 </table>
-                <script>
+                <!--<script>
                   getNumbers(coin);
-                </script>
+                </script>-->
               </div>
               <br />
               <div id="descrip">  
