--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <a class="navbar-brand" href="#">Crypto Tracker</a>
         <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"><a class="nav-link" href="#">home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">about</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
+        <li class="nav-item active"><a class="nav-link" href="index.html">home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
         </ul>
         </div>
     </nav>
