--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-8">
                 <div class="jumbotron">
-                    <h1 class="display-4"><center>Crypto Tracker</center></h1>
+                    <h1 class="display-4">Crypto Tracker</h1>
                     <hr class="my-4">
                     <form class="form-inline d-flex justify-content-center md-form form-sm mt-0" action="details.html" method="GET">
                         <i class="fas fa-search" aria-hidden="true"></i>
@@ -40,8 +40,12 @@
                 </div>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vulputate rhoncus orci, a interdum metus dapibus eget. Donec quis eleifend ante, quis gravida dolor. Curabitur ultricies, urna vitae ultrices pellentesque, felis tortor consectetur massa, eget ornare lacus dui nec nunc. Proin gravida non velit id ultricies. Sed gravida nisi sollicitudin nulla elementum pellentesque. Aliquam pulvinar, diam nec consequat bibendum, odio leo vulputate metus, et finibus erat lectus a nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut placerat dui pharetra, tempor nisi non, vestibulum felis. Morbi commodo eget mauris at euismod. Duis in suscipit ante. Suspendisse maximus accumsan porttitor. Sed aliquam augue consectetur vestibulum pharetra. Suspendisse ut nisi vitae odio accumsan ultrices. Nullam lacinia rhoncus nunc, eget efficitur ante pulvinar a. Mauris nec blandit dolor.</p>
-        <p>Donec semper blandit felis, sit amet faucibus turpis dictum ac. Duis sem odio, tempus vitae faucibus sed, auctor et elit. Suspendisse semper tortor at ex tincidunt, hendrerit pharetra ipsum semper. In bibendum enim diam, id iaculis purus convallis id. Nam mollis tempor velit, vel laoreet nunc. Nulla ut tincidunt erat, vel vulputate metus. Vestibulum nec fermentum arcu, in tincidunt tellus. Nunc pretium mi id leo ultricies, id lobortis ligula tincidunt.</p>
-          
+        <p>
+          Crypto Tracker is a Dashboard that track cryptoassets in the rapidly growing cryptocurrency space.
+          We mainly focus on the top 25 cryptocurrency that is leading the market at any giving time.
+
+          Founded Fall 2020 by Ahmed, Noah and Omar, Crypto Tracker is quickly becoming a trusted source 
+          by users, institutions, and media for comparing thousands of cryptoassets.
+        </p>
     </body>
 </html>
