--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-8">
                 <div class="jumbotron">
-                    <h1 class="display-4"><center>Crypto Tracker</center></h1>
+                    <h1 class="display-4">Crypto Tracker</h1>
                     <hr class="my-4">
                     <form class="form-inline d-flex justify-content-center md-form form-sm mt-0" action="details.html" method="GET">
                         <i class="fas fa-search" aria-hidden="true"></i>
