minor graph change

--- a/about.html
+++ b/about.html
@@ -40,8 +40,9 @@
                 </div>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vulputate rhoncus orci, a interdum metus dapibus eget. Donec quis eleifend ante, quis gravida dolor. Curabitur ultricies, urna vitae ultrices pellentesque, felis tortor consectetur massa, eget ornare lacus dui nec nunc. Proin gravida non velit id ultricies. Sed gravida nisi sollicitudin nulla elementum pellentesque. Aliquam pulvinar, diam nec consequat bibendum, odio leo vulputate metus, et finibus erat lectus a nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut placerat dui pharetra, tempor nisi non, vestibulum felis. Morbi commodo eget mauris at euismod. Duis in suscipit ante. Suspendisse maximus accumsan porttitor. Sed aliquam augue consectetur vestibulum pharetra. Suspendisse ut nisi vitae odio accumsan ultrices. Nullam lacinia rhoncus nunc, eget efficitur ante pulvinar a. Mauris nec blandit dolor.</p>
-        <p>Donec semper blandit felis, sit amet faucibus turpis dictum ac. Duis sem odio, tempus vitae faucibus sed, auctor et elit. Suspendisse semper tortor at ex tincidunt, hendrerit pharetra ipsum semper. In bibendum enim diam, id iaculis purus convallis id. Nam mollis tempor velit, vel laoreet nunc. Nulla ut tincidunt erat, vel vulputate metus. Vestibulum nec fermentum arcu, in tincidunt tellus. Nunc pretium mi id leo ultricies, id lobortis ligula tincidunt.</p>
+        <h1>About</h1>
+        <p>Crypto Tracker is a cryptocurrency dashboard, built for CS 410 Frontend Web Development in Fall 2020. 
+          This website was developed by: Ahmed Al Dulaimi, Noah Hill, and Omar Scott.</p>
           
     </body>
 </html>
