re-doing minor graph change
and fixing a typo

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     </body>
     <p>
       If ypou have any questions about any of the services we provide, please contect us at:
-      Email: support@crptotracker.org
+      Email: support@cyrptotracker.org
 
     </p>
     
