Mae table name responsive. Adjust headline section

--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
             </div>
           </div>
 
-          <div class="col-xs-6 col-md-4" id="headlines_container">
+          <div class="col-xs-6 col-md-4">
             <h3>Cryptocurrencies' latest</h3>
-            <script> request_headlines();</script>
+            <div id="headlines_list" class="headlines">
+              <script> request_headlines();</script>
+            </div>
           </div>
         </div>
     </body>
