--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
 
           <div class="col-xs-6 col-md-4">
-            <h3>Cryptocurrencies' latest</h3>
+            <h3>Crypto latest news</h3>
             <div id="headlines_list" class="headlines">
               <script> request_headlines();</script>
             </div>
