--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.5.0/fetch.js"></script>
-    
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
       crossorigin="anonymous">
     </script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.0.3/numeral.min.js"></script>
     <script src='index.js'> </script>
     <script src="headlines.js"></script>
 </head>
