changed about and contact page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
           <div class="col-xs-6 col-md-8">
-            <h3>Top cryptocurrencies</h3>
+            <h3>Top Crypto</h3>
             <div id="table_container">
               <table id="table" class="table table-striped">
                 <thead>
@@ -74,7 +74,7 @@
           </div>
 
           <div class="col-xs-6 col-md-4">
-            <h3>Crypto latest news</h3>
+            <h3>Crypto's Latest</h3>
             <div id="headlines_list" class="headlines">
               <script> request_headlines();</script>
             </div>
