--- a/about.html
+++ b/about.html
@@ -34,18 +34,14 @@
                         <i class="fas fa-search" aria-hidden="true"></i>
                         <input class="form-control form-control-sm ml-3 w-75" type="text" value="" 
                           aria-label="Search" name="currency" placeholder="Search" list=currency>
-                        <datalist id="currency"></datalist>
-                        <script src="search.js"></script>
                     </form>
                 </div>
             </div>
         </div>
         <p>
-          Crypto Tracker is a Dashboard that track cryptoassets in the rapidly growing cryptocurrency space.
-          We mainly focus on the top 25 cryptocurrency that is leading the market at any giving time.
-
-          Founded Fall 2020 by Ahmed, Noah and Omar, Crypto Tracker is quickly becoming a trusted source 
-          by users, institutions, and media for comparing thousands of cryptoassets.
+          Founded Fall 2020 by Ahmed, Noah and Omar, Crypto Tracker provides a view of top cryptocurrencies, ability to search detailed information about any active cryptocurrency, as well as display recent headlines regarding the world of Blockchain and crytpocurrencies.
+          Crypto Tracker is a Dashboard that tracks cryptoassets in the rapidly growing cryptocurrency space.
+          We mainly focus on the top 25 cryptocurrency that is leading the market at any given time.
         </p>
     </body>
 </html>
