--- a/contact.html
+++ b/contact.html
@@ -35,17 +35,12 @@
                         <i class="fas fa-search" aria-hidden="true"></i>
                         <input class="form-control form-control-sm ml-3 w-75" type="text" value="" 
                           aria-label="Search" name="currency" placeholder="Search" list=currency>
-                        <datalist id="currency"></datalist>
-                        <script src="search.js"></script>
                       </form>
                   </div>
             </div>
           </div>
     </body>
-    <p>
-      If you have any questions about any of the services we provide, please contect us at:
-      Email: support@cyrptotracker.org
-
-    </p>
+    <h3>Find us on LinkedIn!</h3>
+    <p> Ahmed Al Dulaimi - linkedin.com/in/ahmed-al-dulaimi-/</p>
     
 </html>
