--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Styles/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.5.0/fetch.js"></script>
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
@@ -19,8 +19,8 @@
       crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.0.3/numeral.min.js"></script>
-    <script src='index.js'> </script>
-    <script src="headlines.js"></script>
+    <script src='Source/index.js'> </script>
+    <script src="Source/headlines.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
@@ -28,8 +28,8 @@
         <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active"><a class="nav-link" href="index.html">home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="HTML/about.html">about</a></li>
+        <li class="nav-item"><a class="nav-link" href="HTML/contact.html">contact</a></li>
         </ul>
         </div>
     </nav>
