--- a/details.html
+++ b/details.html
@@ -9,11 +9,11 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="details.css" />
+    <link rel="stylesheet" href="Styles/details.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.js"></script>
-    <script src=graph.js></script>
-    <script src=details.js></script>
+    <script src="Source/graph.js"></script>
+    <script src="Source/details.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.0.3/numeral.min.js"></script>
     <script> //Grabbing the url parameter
       var parameters = location.search.substring(1).split("&");
@@ -21,7 +21,7 @@
 
       var coin = temp[1].replaceAll("+", " ");
       coin = unescape(coin);
-      </script>
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
@@ -34,9 +34,6 @@
         </ul>
         </div>
     </nav>
-
-    
-    
       <body>
         <div class="container">
           <div class="row">
