--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Styles/style.css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark md-5">
@@ -23,6 +23,7 @@
         </div>
     </nav>
 
+    
       <body>
         <div class="container">
           <div class="row">
@@ -34,14 +35,12 @@
                         <i class="fas fa-search" aria-hidden="true"></i>
                         <input class="form-control form-control-sm ml-3 w-75" type="text" value="" 
                           aria-label="Search" name="currency" placeholder="Search" list=currency>
-                    </form>
-                </div>
+                      </form>
+                  </div>
             </div>
-        </div>
-        <p>
-          Founded Fall 2020 by Ahmed, Noah and Omar, Crypto Tracker provides a view of top cryptocurrencies, ability to search detailed information about any active cryptocurrency, as well as display recent headlines regarding the world of Blockchain and crytpocurrencies.
-          Crypto Tracker is a Dashboard that tracks cryptoassets in the rapidly growing cryptocurrency space.
-          We mainly focus on the top 25 cryptocurrency that is leading the market at any given time.
-        </p>
+          </div>
     </body>
+    <h3>Find us on LinkedIn!</h3>
+    <p> Ahmed Al Dulaimi - linkedin.com/in/ahmed-al-dulaimi-/</p>
+    
 </html>
