--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active"><a class="nav-link" href="index.html">home</a></li>
-        <li class="nav-item"><a class="nav-link" href="HTML/about.html">about</a></li>
-        <li class="nav-item"><a class="nav-link" href="HTML/contact.html">contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
         </ul>
         </div>
     </nav>
