made style changes

--- a/contact.html
+++ b/contact.html
@@ -42,5 +42,5 @@
     </body>
     <h3>Find us on LinkedIn!</h3>
     <p> Ahmed Al Dulaimi - linkedin.com/in/ahmed-al-dulaimi-/</p>
-    
+    <p> Omar Scott - linkedin.com/in/omar-scott-/</p>
 </html>
