--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
           <div class="col-xs-6 col-md-8">
-            <h3>Top Crypto</h3>
+            <h3>Top 10 Crypto</h3>
             <div id="table_container">
               <table id="table" class="table table-striped">
                 <thead>
